# Agentic-Systems

.github/workflows/: sync.yml
1_foundations/: 4_lab4.ipynb
1_foundations/community_contributions/: 2_lab2.1_ss.ipynb  4_lab4_rdk_career_bot.ipynb  4_lab4_rdk_travel_planner.ipynb  4_lab4_rdk_travel_planner_app.py  Varsha_Ranganathan_LinkedInConnection.ipynb  christopher_contribution_orchestrator_worker.ipynb  imb_agent_loop.ipynb  lab2_sirish_parallel_answer_judge.ipynb  professional_representative_app_with_evaluator-optimizer_pattern.py
1_foundations/community_contributions/1_Akilan/: Week1_lab1_Akilan.ipynb
1_foundations/community_contributions/Ahmed_android_developer/: app.py
1_foundations/community_contributions/Andela_Nikhil/: Week1_Exercise.py
1_foundations/community_contributions/DanielMaru/: 2_lab2.ipynb  lab4_app.py
1_foundations/community_contributions/abrar_foundations/: 2_lab2.ipynb
1_foundations/community_contributions/anil_sharma_akjanme/: day1_assignment.ipynb
1_foundations/community_contributions/arpitt/: 1_lab_using ollma.ipynb
1_foundations/community_contributions/aswamina/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  6_smartFridge.ipynb  app.py  smartfridge.py
1_foundations/community_contributions/kevj/: 2_lab2.ipynb
2_openai/community_contributions/: PrasadGaitonde_2OpenAI_Lab5work.py  PrasadGaitonde_Lab3_UsingOllamaModels.ipynb  frex_email_marketing.ipynb  lawrence_week2_deep_research.ipynb  prasadgaitonde_2OpenAiLab4.ipynb
2_openai/community_contributions/deep-research-cloudmogo/: README.md  main.py  pyproject.toml
2_openai/community_contributions/deep-research-cloudmogo/dragents/: clarification_agent.py  email_sender_agent.py  perform_search_agent.py  report_gen_agent.py  research_execution_tools.py  research_lead_agent.py  research_manager.py  research_presenters.py  research_ui.py  search_planner_agent.py
2_openai/community_contributions/deep-research-cloudmogo/models/: models.py
3_crew/community_contributions/: agents.yaml  akhilaguska27_debate_README.md  crew.py  tasks.yaml
3_crew/community_contributions/PrasadGaitonde/: .gitignore  AGENTS.md  README.md  pyproject.toml  report.md
3_crew/community_contributions/PrasadGaitonde/src/global_climate_modeling_local_mitigation/: crew.py  main.py
3_crew/community_contributions/PrasadGaitonde/src/global_climate_modeling_local_mitigation/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/f1_planner/: README.md  pyproject.toml
3_crew/community_contributions/f1_planner/src/f1_planner/: crew.py  main.py
3_crew/community_contributions/f1_planner/src/f1_planner/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/f1_planner/src/f1_planner/tools/: tools.py
3_crew/community_contributions/gomezc08/interview/: .gitignore  README.md  pyproject.toml
3_crew/community_contributions/gomezc08/interview/output/: candidate_Jane Doe_answers.md  candidate_John Smith_answers.md  hiring_decision.md
3_crew/community_contributions/gomezc08/interview/src/interview/: crew.py  main.py
3_crew/community_contributions/gomezc08/interview/src/interview/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/gomezc08/interview_questions_researcher/: README.md  pyproject.toml
3_crew/community_contributions/gomezc08/interview_questions_researcher/output/: interview_questions.md
3_crew/community_contributions/gomezc08/interview_questions_researcher/src/interview_questions_researcher/: crew.py  main.py
3_crew/community_contributions/gomezc08/interview_questions_researcher/src/interview_questions_researcher/config/: agents.yaml  tasks.yaml
4_langgraph/community_contributions/: lawrence_week4_langraph_sidekick.ipynb
4_langgraph/community_contributions/langgraph-sidekick/: README.md  app.py  pyproject.toml  schema.py  sidekick.py
4_langgraph/community_contributions/langgraph-sidekick/agents/: clarifier.py  evaluator.py  executor.py  finalizer.py  planner.py  researcher.py  summarizer.py
4_langgraph/community_contributions/langgraph-sidekick/db/: sql_memory.py
4_langgraph/community_contributions/langgraph-sidekick/tools/: file_code.py  navigation.py  notifications.py  search.py
4_langgraph/community_contributions/langgraph-sidekick/utils/: utils.py
5_autogen/community_contributions/ai_movie_hospital/: .gitignore  agent.py  creator.py  evaluator.py  main.py  messages.py  pyproject.toml  recruiter.py  schemas.py  ui.py
5_autogen/community_contributions/ai_movie_hospital/output/: doctor_GregoryHouse_Neurologist.md  doctor_MatthewChastain_Neurosurgeon.md
6_mcp/: 1_lab1.ipynb
guides/: 09_ai_apis_and_ollama.ipynb
setup/: SETUP-PC.md  SETUP-linux.md  SETUP-mac.md
(+326 files in other folders)
