[project]
name = "deep-research-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.22.0",
    "ipywidgets>=8.1.5",
    "openai-agents>=0.0.15",
    "python-dotenv>=1.0.1",
    "sendgrid>=6.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=9.0.2",
]
