[project]
name = "global_climate_modeling_local_mitigation"
version = "0.1.0"
description = "global_climate_modeling_local_mitigation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.2"
]

[project.scripts]
global_climate_modeling_local_mitigation = "global_climate_modeling_local_mitigation.main:run"
run_crew = "global_climate_modeling_local_mitigation.main:run"
train = "global_climate_modeling_local_mitigation.main:train"
replay = "global_climate_modeling_local_mitigation.main:replay"
test = "global_climate_modeling_local_mitigation.main:test"
run_with_trigger = "global_climate_modeling_local_mitigation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
