[project]
name = "interview"
version = "0.1.0"
description = "interview using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
interview = "interview.main:run"
run_crew = "interview.main:run"
train = "interview.main:train"
replay = "interview.main:replay"
test = "interview.main:test"
run_with_trigger = "interview.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
