[project]
name = "interview_questions_researcher"
version = "0.1.0"
description = "interview_questions_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
interview_questions_researcher = "interview_questions_researcher.main:run"
run_crew = "interview_questions_researcher.main:run"
train = "interview_questions_researcher.main:train"
replay = "interview_questions_researcher.main:replay"
test = "interview_questions_researcher.main:test"
run_with_trigger = "interview_questions_researcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
